--- a/http-oauth-client/pom.xml
+++ b/http-oauth-client/pom.xml
@@ -17,21 +17,12 @@
             <version>4.4.1</version>
         </dependency>
 
-
-        <!-- Commons codec is used for base 64 encoding -->
+        <!-- Gson is used for parsing JSON -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
-
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-
 
     </dependencies>
 </project>
