--- a/http-oauth-client/pom.xml
+++ b/http-oauth-client/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uk.co.integrate</groupId>
-    <artifactId>java-oauth-client</artifactId>
+    <artifactId>http-oauth-client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
